# Nonograms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: args.hxx  arguments.h  benchmark.h  logger.h  one_line_solver.h  paint.h  puzzle.h  timespan.h
puzzles/: README.md  emoji.pzl  kolobok.pzl  rosenrot.pzl  sparkle.pzl  taiga.pzl  wikipe-tan.pzl
src/: arguments.cpp  benchmark.cpp  main.cpp  one_line_solver.cpp  paint.cpp  puzzle.cpp  timespan.cpp
